fix: Fixing bug for safari not showing date

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ code {
 
 .chart {
   margin: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -23,7 +26,17 @@ code {
 }
 
 .App {
-  height: 100vh;
   background-color: #fff;
   display: flex;
+  flex: 1;
+}
+
+#root {
+  height: 100vh;
+  display: flex;
+  background-color: #fff;
+}
+
+button {
+  max-width: 250px;
 }
